--- a/style.css
+++ b/style.css
@@ -1,25 +1,134 @@
+/* reset browser styles */
+
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+}
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+
 body {
-    background-color: #A3B18A;
+    line-height: 1.2;
+}
+
+ol {
+    padding-left: 1.4em;
+    list-style: decimal;
+}
+
+ul {
+    padding-left: 1.4em;
+    list-style: square;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+/* end reset browser styles */
+
+.about {
+    background: #F7B05B;
+    box-sizing: border-box;
+    border-radius: 20px;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 
-.mainHeader {
-    color: #2C1320;
+.about__header {
+    color: #E63B2E;
+    font-size: 28px;
+    background: #3A405A;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-radius: 20px;
 }
 
-.sectionHeader {
-    color: #413C58;
+.about__link {
+    border: none;
 }
 
-.dobroPowraca {
-    color: pink;
+.about__paragraph {
+    color: #3A405A;
+    text-align: justify;
 }
 
-footer img {
-    max-width: 300px;
-    float: right;
+body {
+    background-color: #FCECC9;
+    min-width: 350px;
+   
 }
 
-h3 {
-    color: #FFFBFE
+.header__heading {
+    color: #E63B2E;
+    font-size: 32px;
+    padding: 20px;
+    background: #3A405A;
+    border-radius: 20px;
+    margin-top: 20px;
+    text-align: center;
+    max-width: 700px;
+    box-sizing:border-box;
+}
+
+.navigation {
+    right: 10px;
+    left: 10px;
+    margin-left:10px;
+}
+
+.news {
+    background: #F7B05B;
+    box-sizing: border-box;
+    border-radius: 20px;
+    padding: 20px;
+    margin-bottom: 20px;
+    max-width:700px;
+    box-sizing:border-box;
+}
+
+.news__header {
+    color: #E63B2E;
+    font-size: 28px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background: #3A405A;
+    border-radius: 20px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.news__news-content__header {
+    color: #E63B2E;
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+.news__news-content__paragraph {
+    color: #3A405A;
+}
+
+.news__news-content__list {
+    color: #3A405A;
+}
+
+.footer__image {
+    max-width: 200px;
+}
+
+.footer__paragraph {
+    color: #3a405a;
 }
