--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* reset browser styles */
 
-html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, img, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
@@ -58,6 +58,7 @@ table {
 
 .about__link {
     border: none;
+    text-decoration: none;
 }
 
 .about__paragraph {
@@ -65,28 +66,32 @@ table {
     text-align: justify;
     background: #2DC7FF;
     border-radius: 20px;
-    padding: 10px;
-    box-shadow: 0px 0px 53px 9px rgba(13, 199, 255, 1);
+    padding: 20px;
 }
 
 body {
     background-color: #005675;
     min-width: 350px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .footer {
-    width:700px;
+    width: 700px;
     margin-left: auto;
     margin-right: auto;
-    display:block;
 }
 
 .footer__image {
     max-width: 200px;
-    
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
+
 .footer__paragraph {
     color: #EAD2AC;
+    text-align: center;
 }
 
 .header__heading {
@@ -104,20 +109,23 @@ body {
 }
 
 .navigation {
-    top: 0;
+    top: 0px;
     right: 0px;
     left: 0px;
     position: fixed;
     background: #3A405A;
-    display: block;
-    height:30px;
+    height: 30px;
     min-width: 350px;
+    display: block;
+    box-sizing: border-box;
 }
 
 .navigation__link {
     margin-left: 10px;
     text-decoration: none;
     color: #EAD2AC;
+    position: relative;
+    top: 5px;
 }
 
 .notices {
@@ -137,8 +145,7 @@ body {
     text-align: justify;
     background: #2DC7FF;
     border-radius: 20px;
-    padding: 15px 15px 20px 20px;
-    box-shadow: 0px 0px 53px 9px rgba(13, 199, 255, 1);
+    padding: 20px 20px 20px 20px;
     margin-bottom: 15px;
 }
 
@@ -154,18 +161,27 @@ body {
 }
 
 .notices__content-header {
-    color: #3A405A;
-    font-size: 20px;
-    margin-bottom:15px;
+    color: #EAD2AC;
+    font-size: 16px;
+    margin-bottom: 15px;
+    background:#3A405A;;
+    padding:10px;
+    box-sizing:border-box;
+    text-align:center;
+    border-radius:20px;
+   
 }
+
+.notices__content-headings {
+  text-align:center;
+}
+
 
 .notices__content-paragraph {
     color: #3A405A;
-    
+    margin-bottom:10px;
 }
 
 .notices__content-list {
     color: #3A405A;
 }
-
-
