--- a/style.css
+++ b/style.css
@@ -71,11 +71,9 @@ table {
 }
 
 body {
-    background-color: #005675;
-    min-width: 350px;
-    margin-left: auto;
-    margin-right: auto;
+    background: #005675;
 }
+
 
 .footer {
     width: 700px;
@@ -182,4 +180,12 @@ body {
     color: #3A405A;
     margin-bottom: 10px;
     text-align: center;
+}
+
+main {
+    width:100%;
+    min-width: 350px;
+    max-width:700px;
+    margin-left: auto;
+    margin-right: auto;
 }
