--- a/style.css
+++ b/style.css
@@ -34,13 +34,14 @@ table {
 /* end reset browser styles */
 
 .about {
-    margin-top: 20px;
     background: #2DC7FF;
     border-radius: 20px;
+    box-shadow: 0px 0px 15px 15px rgba(98, 95, 99, 1);
 }
 
 .about__header {
-
+    color: rgb(253 100 184) !important;
+    font-size: 32px;
 }
 
 .about__link {
@@ -67,11 +68,7 @@ body {
     margin-bottom: 20px;
 }
 
-.footer {
-    max-width: 700px;
-    min-width: 350px;
-    margin: 0 auto;
-}
+.footer {}
 
 .footer__image {
     max-width: 200px;
@@ -80,20 +77,17 @@ body {
 }
 
 .footer__paragraph {
-    color: #EAD2AC;
+    color: #3A405A;
     text-align: center;
-
 }
 
-.header {
-  
-}
+.header {}
 
 .header__image {
     max-width: 100%;
     min-width: 350px;
-    margin: 50px auto 0; 
-    display:block;
+    margin: 50px auto 40px;
+    display: block;
 }
 
 .headers {
@@ -106,25 +100,44 @@ body {
     margin-bottom: 15px;
 }
 
-h1 {font-size:32px;}
+.how-to {
 
-h2 {font-size:28px;}
+}
 
-h3 {font-size:20px;}
+.how-to__header {
+    font-size: 22px;
+}
+
+.how-to__paragraph {
+    background: #DCDCDD;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.join-us {
+    box-shadow: 0px 0px 15px 15px rgba(98, 95, 99, 1);
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.join-us__header {
+    font-size: 28px;
+}
 
 main {
+    width: 100%;
     min-width: 350px;
     max-width: 700px;
     margin: 0 auto;
     box-sizing: border-box;
-    display:block;
+    display: block;
 }
 
 .navigation {
     width: 100%;
     min-width: 350px;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     position: fixed;
     background: #625F63;
     height: 30px;
@@ -133,16 +146,20 @@ main {
 .navigation__link {
     margin-left: 10px;
     text-decoration: none;
-    color: #fff;
+    color: rgb(253 100 184);
     position: relative;
     top: 5px;
 }
 
-.notices {
+.profits {
 
 }
 
-.notices__content {
+.profits__header {
+    font-size: 22px;
+}
+
+.profits-list {
     color: #3A405A;
     text-align: justify;
     background: #DCDCDD;
@@ -151,24 +168,22 @@ main {
     margin-bottom: 15px;
 }
 
-.notices__mainHeader {
- 
+.profits-list__header {
+    font-size: 16px;
 }
 
-.notices__header {
-
-}
-
-.notices__subheader {
-    width: 70%;
-    margin: 0 auto;
-}
-
-.notices__paragraph {}
+.profits-list__paragraphs {}
 
 .paragraphs {
     color: #3A405A;
     text-align: center;
     margin-bottom: 15px;
-    margin-top:10px;
+    margin-top: 10px;
+}
+
+.top {
+    position: fixed;
+    bottom:10px;
+    right:10px;
+    text-decoration: none;
 }
